src/objects/BMCServiceDesk__BMC_BaseElement_History__c.object
<CustomObject>
    <description>Stores the data that tracks the history of all actions that have been performed on configuration items.</description>
    <fields>
        <fullName>BMCServiceDesk__Action__c</fullName>
        <formula>BMCServiceDesk__FKAction__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Created_By__c</fullName>
        <formula>BMCServiceDesk__FKCreated_By__r.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Description__c</fullName>
        <description>This field stores the description related to the Configuration Item</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKAction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action</label>
        <referenceTo>BMCServiceDesk__Action__c</referenceTo>
        <relationshipLabel>BMC_BaseElement Histories</relationshipLabel>
        <relationshipName>BMC_BaseElement_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKBMC_BaseElement__c</fullName>
        <label>Configuration Item</label>
        <referenceTo>BMCServiceDesk__BMC_BaseElement__c</referenceTo>
        <relationshipLabel>BMC_BaseElement Histories</relationshipLabel>
        <relationshipName>BMC_BaseElement_Histories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKCreated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BMC_BaseElement_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Note__c</fullName>
        <description>This field stores the data to allow users to enter in notes</description>
        <inlineHelpText>Use this field to provide details about what has been accomplished when you performed this action. The date and time is recorded for each new entry or update that you make in this field.</inlineHelpText>
        <label>Note</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__System__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field stores the data if the record is system or user</description>
        <label>System</label>
        <type>Checkbox</type>
    </fields>
    <label>Configuration Item History</label>
    <nameField>
        <label>BMC_BaseElement History ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configuration Item Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>BMCServiceDesk__Action_ID_Required</fullName>
        <active>true</active>
        <description>This rule checks for blank or empty Action</description>
        <errorConditionFormula>OR( ISNULL(BMCServiceDesk__FKAction__c) , ISBLANK(BMCServiceDesk__FKAction__c))</errorConditionFormula>
        <errorMessage>Please enter Action.</errorMessage>
    </validationRules>
</CustomObject>